<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="p3.myapplication.CreateMeetingActivity"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="72dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingBottom="8dp"
                    android:text="@string/create_a_new_meeting"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="126dp"
                    tools:layout_editor_absoluteY="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_name_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:id="@+id/meetingNameCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/meeting_name"
                    android:inputType="textPersonName"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/dateLabelCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_border"
                    android:paddingBottom="4dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="2dp"
                    android:paddingTop="6dp"
                    android:text="@string/date_format_create"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/chooseDateButton"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/choose_date"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/startTimeLabelCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_border"
                    android:paddingBottom="4dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="2dp"
                    android:paddingTop="6dp"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/chooseStartTimeButton"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/choose_start_time"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/endTimeLabelCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_border"
                    android:paddingBottom="4dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="2dp"
                    android:paddingTop="6dp"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/chooseEndTimeButton"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/choose_end_time"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/confirmCreate"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/confirm_meeting_create"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>
